# qt6-translations-os2

./: .qmake.conf  .tag  CMakeLists.txt  dependencies.yaml  licenseRule.json
src/: CMakeLists.txt
translations/: CMakeLists.txt
